fix(listitem): pr feedback align values

--- a/packages/react/src/components/List/ListItem/_list-item.scss
+++ b/packages/react/src/components/List/ListItem/_list-item.scss
@@ -204,9 +204,11 @@
         flex: 1;
         display: flex;
         min-width: 0;
+        align-items: center;
 
         &__large {
           flex-direction: column;
+          align-items: unset;
           @include type-style('productive-heading-01');
           color: $text-01;
         }
@@ -228,7 +230,7 @@
     &--row-actions {
       // Negative margin needed to have the actions
       // closer to the edge than than the padding allows
-      margin-right: -$spacing-03;
+      margin-right: -($spacing-03);
       [dir='rtl'] & {
         margin-right: unset;
         margin-left: -($spacing-03);
